--- a/HelloWorld/app/src/main/res/layout/content_hello_world.xml
+++ b/HelloWorld/app/src/main/res/layout/content_hello_world.xml
@@ -33,8 +33,8 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/button"
+        android:text="@string/sayHello"
+        android:id="@+id/changeText"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="100dp" />
 </LinearLayout>
